# SmartSOP

./: .gitignore  TRAE Group assessment report.md  docker-compose.yml
backend/: .env.example  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/versions/: 20260521_2033_initial_schema.py  20260522_0001_add_revision_to_procedure_settings.py  20260523_0001_add_alert_schemas_to_step.py  20260524_0001_drop_alert_fields.py  20260525_0001_add_source_docx.py  20260525_0002_drop_expected_output.py  (+48 more)
backend/app/: config.py  db.py  deps.py  errors.py  i18n.py  main.py  permission_labels.py  permissions.py  security.py  seed.py  storage.py  tenant.py  tenant_isolation.py  tenant_middleware.py
backend/tests/: conftest.py  test_analytics_api.py  test_analytics_asset_cost.py  test_analytics_cost_labor.py  test_analytics_export.py  test_analytics_inventory_abc.py  test_analytics_personnel.py  test_analytics_requests.py  test_analytics_trends.py  test_analytics_wo_distribution.py  test_asset_categories_api.py  test_asset_downtime_auto.py  test_asset_downtime_cascade.py  test_asset_downtime_model.py  test_asset_model.py  test_asset_service.py  test_assets_api.py  test_auth_api.py  test_auth_deps.py  test_auth_schemas.py  test_auth_service.py  test_company_api.py  test_company_model.py  test_config_jwt.py  test_cookie_auth.py  test_cost_category_api.py  test_cross_tenant_e2e.py  test_customer_api.py  test_email_verification_api.py  test_feature_gating.py  test_i18n.py  test_locations_api.py  test_meter_api.py  test_migration_roundtrip.py  test_multi_part_api.py  test_mysql_bootstrap.py  test_mysql_concurrency.py  test_mysql_integration.py  test_no_literal_text_default.py  test_notification_preferences_api.py  (+63 more)
(+1015 files in other folders)
